[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pong.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_over.wav" type="AudioStream" id=3]
[ext_resource path="res://Blip_select 3.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 105.724, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.273, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 101.905, 10 )

[node name="Pong" type="Node2D"]
rotation = 18.8496
script = ExtResource( 1 )

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 1049.42, -9.71314 )
scale = Vector2( 10, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 1929.79, 546.626 )
rotation = 1.5708
scale = Vector2( 5.8, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 1012.8, 1089.87 )
scale = Vector2( 10, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 3 )

[node name="PaddlePosition" type="Position2D" parent="."]
position = Vector2( 35.9692, -108.689 )

[node name="BallPosition" type="Position2D" parent="."]
position = Vector2( 1669.64, 540 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 1

[node name="CollisionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
mix_target = 1

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.247059, 0.290196, 1 )
[connection signal="start_game" from="HUD" to="." method="new_game"]
